Fix zkSync EIP-712 transaction signing for Karaoke Scorer v4 on Lens Testnet
EXECUTIVE SUMMARY
=================
After a 10+ hour debugging marathon, successfully resolved critical issues preventing
PKP-signed zkSync EIP-712 transactions from executing on Lens Testnet (Chain ID 37111).

ROOT CAUSES IDENTIFIED & FIXED
===============================

1. CRITICAL: yParity vs v Encoding Bug
   - zkSync EIP-712 RLP requires yParity (0 or 1) in field 7, NOT v (27 or 28)
   - Previous code incorrectly used v directly in RLP encoding
   - Fix: Convert v to yParity using: yParity = v - 27
   - Impact: Transactions were being rejected with "Account validation returned invalid magic value"

2. CRITICAL: Insufficient Gas Limit
   - KaraokeScoreboardV4.updateScore() requires ~1.4M gas on Lens Testnet
   - Previous limit: 500k-1M gas → Status 0 (execution failure)
   - Fix: Increased to 2M gas limit
   - Impact: Transactions validated successfully but execution failed silently

TECHNICAL DETAILS
=================

zkSync EIP-712 Transaction Structure:
- Type: 0x71 (113 decimal)
- Domain: {name: "zkSync", version: "2", chainId: 37111}
- RLP Fields (16 total):
  [0] nonce
  [1] maxPriorityFeePerGas
  [2] maxFeePerGas (gasPrice)
  [3] gasLimit
  [4] to
  [5] value
  [6] data
  [7] yParity (0 or 1) ← CRITICAL FIX
  [8] r (32 bytes)
  [9] s (32 bytes)
  [10] chainId
  [11] from
  [12] gasPerPubdataByteLimit
  [13] factoryDeps
  [14] customSignature (empty for EOA)
  [15] paymasterParams

Signature Process:
1. Calculate EIP-712 hash: keccak256("\x19\x01" + domainSeparator + structHash)
2. Sign with PKP: Lit.Actions.signAndCombineEcdsa()
3. Verify recovery: ecrecover(hash, v, r, s) === from
4. Convert for RLP: yParity = v - 27 (where v is 27 or 28)
5. Encode RLP with yParity in field 7
6. Prepend type: "0x71" + rlpEncoded

FILES CHANGED
=============

1. src/stt/karaoke-scorer-v4.js
   - Line 346: gasLimit increased from 500k to 2M
   - Line 421: gasLimit increased from 500k to 2M
   -

--- a/root/lit-actions/package.json
+++ b/root/lit-actions/package.json
@@ -8,7 +8,8 @@
     "mint-pkp": "bun run scripts/mint-pkp.ts",
     "update-pkp-permissions": "bun run scripts/update-pkp-permissions.ts",
     "upload-action": "node scripts/upload-lit-action.mjs",
-    "encrypt-keys": "node scripts/encrypt-keys-v8.mjs"
+    "encrypt-keys": "node scripts/encrypt-keys-v8.mjs",
+    "test:zksync": "node src/test/test-zksync-sig.mjs"
   },
   "dependencies": {
     "@lit-protocol/auth": "^8.0.0",
