Implement 2-button auth flow with automatic Lens connection
- Split auth into separate Create Account / Sign In buttons
- Simplified UI: removed complex step indicators, just spinner + status
- Auto-trigger Lens login after PKP creation (2 signatures, 1 click)
- Fixed race condition by passing wallet client directly to loginLens
- Responsive dialog layout (removed fixed widths)
- Added TikTok-style 'or' divider between buttons
- Status messages: 'Finalizing...' after 2nd signature
- Clean completion state with checkmark and Continue button

--- a/app/package.json
+++ b/app/package.json
@@ -20,12 +20,9 @@
     "@lens-chain/storage-client": "^1.0.6",
     "@lens-protocol/client": "^0.0.0-canary-20250430134539",
     "@lens-protocol/metadata": "^2.1.0",
-    "@lit-protocol/auth": "^8.0.0",
-    "@lit-protocol/lit-client": "^8.0.0-alpha.18",
-    "@lit-protocol/networks": "^8.0.0-alpha.27",
-    "@particle-network/auth-connectors": "^2.1.1",
-    "@particle-network/connectkit": "^2.1.3",
-    "@particle-network/evm-connectors": "^2.1.2",
+    "@lit-protocol/auth": "^8.0.2",
+    "@lit-protocol/lit-client": "8.0.2",
+    "@lit-protocol/networks": "8.0.2",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -49,8 +46,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "viem": "^2",
-    "wagmi": "^2"
+    "viem": "^2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
