feat: Major karaoke pipeline upgrade with Demucs, optimized Lit Actions, and credit flow UI
## Infrastructure & Architecture

- **Replace Spleeter with Demucs**: New demucs-modal/ service for superior audio separation quality
- **Remove legacy Spleeter**: Delete spleeter-modal/ files and dependencies
- **Update webhook-server**: Latest version with improved job handling

## Smart Contracts

- **KaraokeCatalogV2**: New catalog contract with batch processing support and optimized gas usage
- **KaraokeCreditsV1**: Enhanced credit system with improved accounting
- **Deploy scripts**: Add deployment script for V2 catalog on Base Sepolia
- **Updated ABIs**: Sync contract ABIs with frontend

## Lit Actions (Major Version Updates)

### New Features
- **match-and-segment-v6**: Fast mode without alignment, uses LRClib for instant lyrics
- **audio-processor-v4**: Song-based processing (processes all segments at once via Demucs)
- **lyrics-alignment-v1**: Per-language karaoke alignment for multi-language support
- **update-karaoke-contract-batch**: Batch contract updates with 3M gas limit + runOnce
- **auto-purchase-credits**: Automated credit purchase flow for seamless UX

### Optimizations
- **runOnce API**: Zero-signature Lit Action execution using PKP auth context
- **Encrypted keys v7-v11**: Multiple key versions for different CID deployments
- **Batch processing**: Song-level operations instead of segment-level for efficiency

### Code Organization
- Archive old versions (v1-v4 audio processors, v2-v4 match-and-segment)
- Move study tests to src/test/ directory
- Reorganize docs/ with archive/ subdirectory
- Fix test-fixtures/ path (was text-fixtures/)

## Frontend (React + TypeScript)

### New Components & UI
- **CreditFlowDialog**: Complete credit purchase flow with USDC integration
- **InsufficientBalanceDialog**: Clear messaging for insufficient credits/USDC
- **WalletPageView**: Wallet management interface
- **Sonner toast**: Add toast notification system for user fe

--- a/lit-actions/.gitignore
+++ b/lit-actions/.gitignore
@@ -4,6 +4,12 @@ lit-auth-storage/
 # Sensitive - contains PKP credentials
 output/
 
+# Test outputs
+test-results/
+
+# Dependencies
+node_modules/
+
 # Environment variables
 .env
 .env.*
