--- a/app/package.json
+++ b/app/package.json
@@ -38,11 +38,13 @@
     "clsx": "^2.1.1",
     "i18next": "^25.5.3",
     "lit-js-sdk": "^1.1.250",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-i18next": "^16.0.0",
     "react-router-dom": "^7.9.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
