--- a/contracts/evm/base-sepolia/foundry.toml
+++ b/contracts/evm/base-sepolia/foundry.toml
@@ -2,10 +2,11 @@
 src = "."
 out = "out"
 libs = ["lib"]
-solc_version = "0.8.19"
+solc_version = "0.8.30"
 optimizer = true
-optimizer_runs = 200
+optimizer_runs = 1000000
 via_ir = true
+evm_version = "cancun"
 
 remappings = [
     "forge-std/=lib/forge-std/src/",
