--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "dev:prod": "dotenvx run -f .env.production -- vite"
+    "dev:prod": "dotenvx run -f .env.production -- vite",
+    "test:unit": "vitest run --config vitest.unit.config.ts src/machines",
+    "test:unit:watch": "vitest --config vitest.unit.config.ts src/machines",
+    "test:unit:all": "vitest run --config vitest.unit.config.ts"
   },
   "dependencies": {
     "@fontsource/geist": "^5.2.8",
@@ -33,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@tanstack/react-query": "^5.90.2",
+    "@xstate/react": "^6.0.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,7 +52,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "viem": "^2"
+    "viem": "^2",
+    "xstate": "^5.23.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
@@ -67,6 +72,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
