fix: Remove env override for Lit Action CIDs - config is single source of truth
- Remove environment variable override logic from lit-actions.ts
- These are PUBLIC IPFS CIDs, not secrets
- Eliminates confusion between .env and config file
- Update comments to make it clear CIDs belong in config ONLY
- No more VITE_LIT_ACTION_* env vars supported

Why this matters:
- Previous pattern caused v9/v10 mismatch (env had old CID)
- Config file is now the ONLY source (version controlled)
- Clearer separation: secrets in .env, public values in config

--- a/app/.env.example
+++ b/app/.env.example
@@ -22,10 +22,5 @@ VITE_STUDY_PROGRESS_ADDRESS=0x0000000000000000000000000000000000000000
 VITE_KARAOKE_SCOREBOARD_ADDRESS=0x8301E4bbe0C244870a4BC44ccF0241A908293d36
 
 # Lit Action CIDs (IPFS)
-# ⚠️  IMPORTANT: Lit Action CIDs are now defined in src/config/lit-actions.ts
-# Only set these env vars if you need to override for local development/testing
-# Production values are version-controlled in the config file
-#
-# VITE_LIT_ACTION_SEARCH=QmLocalTestCID
-# VITE_LIT_ACTION_MATCH_SEGMENT=QmLocalTestCID
-# VITE_LIT_ACTION_AUDIO_PROCESSOR=QmLocalTestCID
+# ⚠️  DO NOT add Lit Action CIDs here!
+# They are PUBLIC (not secrets) and defined in src/config/lit-actions.ts
