--- a/cloudflare-worker-scraper/package.json
+++ b/cloudflare-worker-scraper/package.json
@@ -25,6 +25,7 @@
     "wrangler": "^3.95.0"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.10.1"
+    "@neondatabase/serverless": "^0.10.1",
+    "hono": "^4.10.3"
   }
 }
