feat: Add language detection, ElevenLabs/OpenRouter services, karaoke schemas
- Add language field to genius_songs and musicbrainz_works tables
- Extract structured Genius metadata (language, release_date, lyrics_state, etc)
- Port OpenRouter service with selectKaraokeSegment() for 190s segment selection
- Add ElevenLabs service for word-level forced alignment
- Create karaoke_segments and elevenlabs_word_alignments tables
- Add karaoke routes (placeholder implementation)
- Add SQL migration files for new tables
- Create db/base.ts for future domain splitting

--- a/cloudflare-worker-scraper/wrangler.toml
+++ b/cloudflare-worker-scraper/wrangler.toml
@@ -5,7 +5,6 @@ compatibility_date = "2024-11-01"
 # Environment variables (set via: wrangler secret put NEON_DATABASE_URL)
 # Secrets stored securely in Cloudflare, not in this file
 
-# Cron trigger (daily at 2 AM UTC)
-# Uncomment when ready to enable automated scraping
-# [triggers]
-# crons = ["0 2 * * *"]
+# Cron trigger - Run enrichment pipeline every 5 minutes
+[triggers]
+crons = ["*/5 * * * *"]
