--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fontsource/geist": "^5.2.8",
@@ -62,8 +58,6 @@
     "@storybook/react-vite": "^9.1.10",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/vite": "^4.1.12",
-    "@testing-library/jest-dom": "6.9.1",
-    "@testing-library/react": "16.3.0",
     "@types/node": "^24.6.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
@@ -74,13 +68,11 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^9.1.10",
     "globals": "^16.3.0",
-    "jsdom": "27.0.1",
     "postcss": "^8.5.6",
     "storybook": "^9.1.10",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
-    "vitest": "4.0.4"
+    "vite": "^7.1.2"
   }
 }
