--- a/quansic-service/.dockerignore
+++ b/quansic-service/.dockerignore
@@ -1,9 +1,12 @@
 node_modules
 .git
 .gitignore
-README.md
 *.log
 .env
 .env.*
 deploy-akash.yaml
 example-client.ts
+__pycache__
+*.pyc
+.pytest_cache
+.mypy_cache
