--- a/karaoke-pipeline/package.json
+++ b/karaoke-pipeline/package.json
@@ -10,9 +10,22 @@
     "pipeline:all": "bun run-pipeline.ts --all --limit=50",
     "pipeline:step": "bun run-pipeline.ts",
     "scrape": "dotenvx run -f .env -- bun src/processors/01-scrape-tiktok.ts",
-    "test:pipeline": "bun run-pipeline.ts --step=2 --limit=1"
+    "test:pipeline": "bun run-pipeline.ts --step=2 --limit=1",
+    "test": "echo 'Use test:* scripts - bun test:complete, bun test:steps, etc.'",
+    "test:complete": "bun tests/test-complete-pipeline.ts",
+    "test:steps": "bun tests/test-steps.ts",
+    "test:alignment": "bun tests/test-alignment.ts",
+    "test:translation": "bun tests/test-translation.ts",
+    "test:demucs": "bun tests/test-demucs-health.ts",
+    "test:genius": "bun tests/test-genius.ts",
+    "test:status": "bun scripts/check-pipeline-status.ts",
+    "scripts": "echo 'Use scripts from scripts/ directory'",
+    "scripts:status": "bun scripts/check-pipeline-status.ts",
+    "scripts:backfill": "bun scripts/backfill-genius-data.ts"
   },
   "dependencies": {
+    "@irys/sdk": "^0.2.11",
+    "@neondatabase/serverless": "^1.0.2",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "hono": "^4.7.11",
     "postgres": "^3.4.7"
