Revert 'fix': Restore original verification logic (trust AcoustID confidence)
v1.0.2 was a mistake - I broke a working system by misunderstanding the design.

The ORIGINAL logic was correct:
  verified = confidence >= 0.90 && (title_match || artist_match || confidence >= 0.95)

Why this is right:
- AcoustID fingerprinting is accurate (matches audio waveform)
- AcoustID metadata database can be wrong/outdated
- Example: 'CUFF IT' by Beyoncé correctly downloaded but AcoustID returned
  metadata 'Kelsey' by Metro Station (95.3% confidence)
- User confirmed audio was correct, metadata was wrong

v1.0.3 restores the smart verification logic:
- If confidence >90% AND (title OR artist matches) → trust it
- OR if confidence >95% → trust it anyway (even if metadata wrong)

Reverts commit 3e47880

--- a/audio-download-service/deploy-akash.yaml
+++ b/audio-download-service/deploy-akash.yaml
@@ -3,7 +3,7 @@ version: "2.2"
 
 services:
   slsk:
-    image: t3333chn0000/audio-download-service:v1.0.2  # ✅ Fixed verification logic (requires title AND artist match)
+    image: t3333chn0000/audio-download-service:v1.0.3  # ✅ Trust AcoustID confidence >95% even with wrong metadata (v1.0.2 was broken)
     expose:
       - port: 3001
         as: 80
