--- a/audio-download-service/deploy-akash.yaml
+++ b/audio-download-service/deploy-akash.yaml
@@ -3,7 +3,7 @@ version: "2.2"
 
 services:
   slsk:
-    image: t3333chn0000/audio-download-service:v1.0.3  # ✅ Trust AcoustID confidence >95% even with wrong metadata (v1.0.2 was broken)
+    image: t3333chn0000/audio-download-service:v1.0.4  # ✅ Fire-and-forget: returns immediately, processes async
     expose:
       - port: 3001
         as: 80
