--- a/audio-download-service/deploy-akash.yaml
+++ b/audio-download-service/deploy-akash.yaml
@@ -3,7 +3,7 @@ version: "2.2"
 
 services:
   slsk:
-    image: t3333chn0000/audio-download-service:v1.1.1  # ✅ Fixed: Soulseek patch explicitly applied (Bun compat)
+    image: t3333chn0000/audio-download-service:v1.1.2  # ✅ Fixed: Complete Soulseek patch (server.js + slsk-client.js null callback handling)
     expose:
       - port: 3001
         as: 80
