feat: Integrate spotify_artists enrichment into pipeline queue
- Add spotify_artists to enrichment task types in resolve-spotify.ts
- Refactor spotify-artists.ts to use queue-driven architecture
- Fix upsertSpotifyArtistSQL to use images JSONB column instead of image_url
- Add task:spotify-artists script to package.json

All 4 integration gaps identified and fixed. Spotify artist enrichment now
follows same queue pattern as other enrichment tasks.

--- a/new-karaoke-pipeline/package.json
+++ b/new-karaoke-pipeline/package.json
@@ -8,6 +8,7 @@
     "db:migrate": "bun run src/db/migrate.ts",
     "db:status": "bun run src/db/status.ts",
     "task:iswc": "bun run src/tasks/enrichment/iswc-discovery.ts",
+    "task:spotify-artists": "bun run src/tasks/enrichment/spotify-artists.ts",
     "task:separate": "bun src/tasks/audio/separate-audio.ts",
     "task:segment": "bun src/tasks/audio/select-segments-simple.ts",
     "task:enhance": "bun src/tasks/audio/enhance-audio.ts",
