fix: Update build script and clean up unused env vars for Fleek deployment

--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev:bun": "bun run vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "build:bun": "bun run tsc -b && bun run vite build",
     "lint": "eslint .",
     "lint:bun": "bun run eslint .",
