--- a/app/.env.example
+++ b/app/.env.example
@@ -12,3 +12,7 @@ VITE_LENS_CUSTOM_NAMESPACE=0xa304467aD0C296C2bb11079Bc2748223568D463e
 # Set to "local" to use local Graph Node (http://127.0.0.1:8000)
 # Defaults to "studio" (The Graph Studio deployment)
 # VITE_SUBGRAPH_MODE=local
+
+# Lit Payments (naga-test)
+# Payer address used to sponsor PKP minting / Lit Actions (keep key out of the browser)
+VITE_LIT_PAYER_ADDRESS=0x9456aec64179FE39a1d0a681de7613d5955E75D3
