Simplified pipeline v3 db

--- a/app/.env.example
+++ b/app/.env.example
@@ -2,11 +2,14 @@
 # Environment: testnet or mainnet
 VITE_LENS_ENVIRONMENT=testnet
 
-# Lens App Address (K-School test app on Lens testnet)
-VITE_LENS_APP_ADDRESS=0x77fc7265c6a52E7A9dB1D887fB0F9A3d898Ae5a0
+# Lens App Address (K-School app on Lens testnet)
+VITE_LENS_APP_ADDRESS=0x5856057743d66951e43361ac3E1e67C6474Ea7B6
 
-# Lens Custom Namespace (kschool2/*)
-VITE_LENS_CUSTOM_NAMESPACE=0xa304467aD0C296C2bb11079Bc2748223568D463e
+# Lens Graph Address (for feed/timeline queries)
+VITE_LENS_GRAPH_ADDRESS=0x73b0588EE59f299D66E368ea6A1a400D41d33E02
+
+# Lens Custom Namespace (username namespace)
+VITE_LENS_CUSTOM_NAMESPACE=0x6Cf6bC01D51aF736Cd34bC3a682B7b081eA77B07
 
 # Subgraph Mode (optional)
 # Set to "local" to use local Graph Node (http://127.0.0.1:8000)
