--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@fontsource/geist": "^5.2.8",
     "@lens-chain/sdk": "^1.0.3",
     "@lens-chain/storage-client": "^1.0.6",
@@ -47,6 +49,7 @@
     "graphql-request": "^7.3.1",
     "i18next": "^25.6.3",
     "i18next-browser-languagedetector": "^8.2.0",
+    "opus-decoder": "^0.7.11",
     "process": "^0.11.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
