--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -5,14 +5,14 @@ schema:
   file: ./schema.graphql
 dataSources:
   # KaraokeEvents - Clip lifecycle + karaoke grading
-  # Address: 0x1eF06255c8e60684F79C9792bd4A66d05B38ed76 (V2 with slug fields)
+  # Address: 0x8f97C17e599bb823e42d936309706628A93B33B8 (V3 - removed unlock params from SongEncrypted)
   - kind: ethereum
     name: KaraokeEvents
     network: lens-testnet
     source:
-      address: "0x1eF06255c8e60684F79C9792bd4A66d05B38ed76"
+      address: "0x8f97C17e599bb823e42d936309706628A93B33B8"
       abi: KaraokeEvents
-      startBlock: 4215600
+      startBlock: 4216537
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -27,12 +27,12 @@ dataSources:
         - name: KaraokeEvents
           file: ./abis/KaraokeEvents.json
       eventHandlers:
-        # Clip lifecycle events (V2 with slug fields)
+        # Clip lifecycle events (V3 with slug fields, no unlock params)
         - event: ClipRegistered(indexed bytes32,string,string,string,string,string,string,string,string,uint32,uint32,string,indexed address,uint64)
           handler: handleClipRegistered
         - event: ClipProcessed(indexed bytes32,string,string,uint8,string,uint64)
           handler: handleClipProcessed
-        - event: SongEncrypted(indexed bytes32,string,string,string,address,uint32,string,uint64)
+        - event: SongEncrypted(indexed bytes32,string,string,string,string,uint64)
           handler: handleSongEncrypted
         - event: ClipToggled(indexed bytes32,bool,uint64)
           handler: handleClipToggled
@@ -102,7 +102,7 @@ dataSources:
       eventHandlers:
         - event: TranslationQuestionRegistered(indexed bytes32,indexed bytes32,indexed bytes32,string,uint16,string,string,uint16,address,uint64)
           handler: handleTranslationQuestionRegistered
-        - event: TriviaQuestionRegistered(indexed bytes32,string,string,string,uint16,indexed address,uint64)
+        - event: TriviaQuestionRegistered(indexed bytes32,indexed string,string,string,uint16,indexed address,uint64)
           handler: handleTriviaQuestionRegistered
         - event: SayItBackAttemptGraded(indexed uint256,indexed bytes32,indexed bytes32,uint16,address,uint16,uint8,string,uint64)
           handler: handleSayItBackAttemptGraded
